minor implentations and docker
